--- a/Data_Structures/Strings/C++/CMakeLists.txt
+++ b/Data_Structures/Strings/C++/CMakeLists.txt
@@ -18,6 +18,12 @@ file (GLOB source_file_5 "${source_dir}/sort.cpp")
 
 file(GLOB source_file_6 "${source_dir}/vectors.cpp")
 
+file (GLOB source_file_7 "${source_dir}/palindrome.cpp")
+
+file (GLOB source_file_8 "${source_dir}/occurance.cpp")
+
+file(GLOB source_file_9 "${source_dir}/lexi.cpp")
+
 add_executable (reverse "${source_file_1}")
 
 add_executable (pangram "${source_file_2}")
@@ -29,3 +35,9 @@ add_executable (anagram "${source_file_4}")
 add_executable (sorted "${source_file_5}")
 
 add_executable (vectors "${source_file_6}")
+
+add_executable (palindrome "${source_file_7}")
+
+add_executable (occurance "${source_file_8}")
+
+add_executable (lexi "${source_file_9}")
